--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta charset="utf-8" />
-
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -12,11 +11,7 @@
   <link rel="apple-touch-icon" href="/icons_/icon192.png">
   <meta name="theme-color" content="#317EFB"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <meta name="description" content="Mathe-Aufgabensammlung. Aufgaben für die Vorbereitung mittlerer Schulabschlüsse wie BBR und MSA in Mathe. Typische Prüfungsaufgaben BBR und MSA sowie Basisaufgaben, die Mathe-Grundkenntnisse abfagen." />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="mathe-bbr-msa.app - die Mathe-App für Aufgaben zur Prüfungsvorbereitung." />
-  <meta property="og:description" content="Mathe-Aufgabensammlung. Aufgaben für die Vorbereitung mittlerer Schulabschlüsse wie BBR und MSA in Mathe. Typische Prüfungsaufgaben BBR und MSA sowie Basisaufgaben, die Mathe-Grundkenntnisse abfagen." />
   <meta property="og:image" content="https://schlau.app//icons_/icon192.png" />
   <meta property="og:image:secure_url" content="https://schlau.app/icons_/icon192.png" />
   <meta property="og:image:type" content="image/png" />
@@ -24,16 +19,14 @@
   <meta property="og:image:height" content="192" />
   <meta property="og:image:alt" content="Logo der Mathe-App mathe-bbr-msa.app blau rot mit tap icon" />
   <meta property="og:url" content="https://mathe-bbr-msa.app" />
-  <meta property="twitter:title" content="mathe-bbr-msa.app - die Mathe-App für Aufgaben zur Prüfungsvorbereitung." />
-  <meta property="twitter:description" content="Mathe-Aufgabensammlung. Aufgaben für die Vorbereitung mittlerer Schulabschlüsse wie BBR und MSA in Mathe. Typische Prüfungsaufgaben BBR und MSA sowie Basisaufgaben, die Mathe-Grundkenntnisse abfagen." />
   <meta property="twitter:image" content="https://schlau.app//icons_/icon192.png" />
   <meta content="summary_large_image" name="twitter:card"/>
   <meta property="og:locale" content="de_DE" />
   <meta property="og:locale:alternate" content="en_US" />
   <meta property="og:site_name" content="mathe-bbr-msa.app" />
   <link rel="manifest" href="/manifest.json" />
- 
-  <title>BBR und MSA Aufgaben</title>
+  <title>Mathe-Prüfungen BBR und MSA: Aufgaben, Praxis, Grundlagen und Lerninhalte</title>
+  <!-- <meta name="description" content="" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
